<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_grid_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".InfoProductFragment"
    android:columnCount="2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="@string/name"
        style="@style/TextStyleBold_16"
        android:background="@drawable/cell_border"/>

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="Название продукта"
        style="@style/TextStyle16"
        android:background="@drawable/cell_border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="@string/type"
        style="@style/TextStyleBold_16"
        android:background="@drawable/cell_border"/>

    <TextView
        android:id="@+id/text_view_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="Тип продукта"
        style="@style/TextStyle16"
        android:background="@drawable/cell_border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="@string/firm"
        style="@style/TextStyleBold_16"
        android:background="@drawable/cell_border"/>

    <TextView
        android:id="@+id/text_view_firm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="Название фирмы"
        style="@style/TextStyle16"
        android:background="@drawable/cell_border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="@string/manufacture_date"
        style="@style/TextStyleBold_16"
        android:background="@drawable/cell_border"/>

    <TextView
        android:id="@+id/text_view_manufacture_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="00.00.0000"
        style="@style/TextStyle16"
        android:background="@drawable/cell_border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="@string/expiry_date"
        style="@style/TextStyleBold_16"
        android:background="@drawable/cell_border"/>

    <TextView
        android:id="@+id/text_view_expiry_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="00.00.0000"
        style="@style/TextStyle16"
        android:background="@drawable/cell_border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="@string/weight_volume"
        style="@style/TextStyleBold_16"
        android:background="@drawable/cell_border"/>

    <TextView
        android:id="@+id/text_view_mass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="500 кг"
        style="@style/TextStyle16"
        android:background="@drawable/cell_border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="@string/food_value"
        style="@style/TextStyleBold_16"
        android:background="@drawable/cell_border"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:columnCount="2"
        android:background="@drawable/cell_border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:text="@string/proteins"
            style="@style/TextStyle16"
            android:background="@drawable/cell_border"/>

        <TextView
            android:id="@+id/text_view_proteins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="56.8 г"
            style="@style/TextStyle16"
            android:background="@drawable/cell_border"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:text="@string/fats"
            style="@style/TextStyle16"
            android:background="@drawable/cell_border"/>

        <TextView
            android:id="@+id/text_view_fats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="23.5 г"
            style="@style/TextStyle16"
            android:background="@drawable/cell_border"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:text="@string/carbohydrates"
            style="@style/TextStyle16"
            android:background="@drawable/cell_border"/>

        <TextView
            android:id="@+id/text_view_carbohydrates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="33.0 г"
            style="@style/TextStyle16"
            android:background="@drawable/cell_border"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:text="@string/calories"
            style="@style/TextStyle16"
            android:background="@drawable/cell_border"/>

        <TextView
            android:id="@+id/text_view_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:gravity="center"
            android:text="560 ккал/\n800 кДж"
            style="@style/TextStyle16"
            android:background="@drawable/cell_border"/>

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="@string/allergens"
        style="@style/TextStyleBold_16"
        android:background="@drawable/cell_border"/>

    <TextView
        android:id="@+id/text_view_allergens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="Список аллергенов"
        style="@style/TextStyle16"
        android:background="@drawable/cell_border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="@string/measurement_type"
        style="@style/TextStyleBold_16"
        android:background="@drawable/cell_border"/>

    <TextView
        android:id="@+id/text_view_measurement_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:text="штуки"
        style="@style/TextStyle16"
        android:background="@drawable/cell_border"/>

</GridLayout>